@@ -1,3 +1,9 @@
+2002-07-09  Sam Steingold  <sds@gnu.org>
+
+	* pathname.d (PARSE-NAMESTRING): barf on symbols when
+	CUSTOM:*PARSE-NAMESTRING-ANSI* is non-NIL
+	(FILE-STAT-INTERNAL): use coerce_pathname()
+
 2002-07-08  Sam Steingold  <sds@gnu.org>
 
 	* clos.lisp (check-metaclass-mix): new function
